testsuite/tests/dependent/should_fail/RenamingStar.hs
{-# LANGUAGE TypeInType #-}

module RenamingStar where

data Foo :: *
