testsuite/tests/dependent/should_fail/RenamingStar.stderr

RenamingStar.hs:5:13: error:
    Operator applied to too few arguments: *
    Suggested fix:
      Use ‘Type’ from ‘Data.Kind’ instead.
      NB: with NoStarIsType, ‘*’ is treated as a regular type operator.
